deploy/archive/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cockroach
  labels:
    app.kubernetes.io/part-of: cockroach-internet
